# CHAT

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  container_build.sh  env_setup.sh  run.sh
ModuleBase/: CMakeLists.txt  ModuleBase.cpp  ModuleBase.hpp
ModuleLoader/: CMakeLists.txt  ModuleLoader.cpp  ModuleLoader.hpp
Utils/: CMakeLists.txt
Utils/CommonUtils/: CMakeLists.txt  RandomCode.cpp  RandomCode.hpp
Utils/DataBaseManager/: CMakeLists.txt  DBManager.cpp  DBThreadPool.hpp
Utils/EnvManager/: CMakeLists.txt  EnvManager.cpp  EnvManager.hpp
Utils/FileUtils/: CMakeLists.txt  CommonDefine.hpp  FileStream.hpp  fileSystem.hpp  filesystem.cpp
Utils/JsonUtils/: CMakeLists.txt  JsonUtils.cpp  JsonUtils.hpp
Utils/KafkaClient/: CMakeLists.txt  ChatDeliveryCb.cpp  ChatDeliveryCb.hpp  ChatEventCb.hpp  ChatKafkaCallbackBase.hpp  ChatKafkaCommon.hpp  ChatPartitionerCb.cpp  ChatPartitionerCb.hpp  ChatRebalanceCb.cpp  ChatRebalanceCb.hpp  DataProcessor.hpp  DataReceiver.cpp  DataReceiver.hpp  DataSender.cpp  DataSender.hpp
Utils/KafkaDataSender/: CMakeLists.txt  ChatEventCb.cpp  DataSender.hpp  DeliveryCb.cpp  DeliveryCb.hpp
Utils/Logger/: CMakeLists.txt  LogMacroDef.hpp  Logger.cpp  Logger.hpp  LoggerCommonDefine.hpp
Utils/Module/: CMakeLists.txt  ModuleBase.hpp  ModuleLoader.cpp  ModuleLoader.hpp  ModuleUtils.hpp
Utils/Protobuf/: CMakeLists.txt  test.pb.cc  test.pb.h  test.proto
Utils/RedisClient/: CMakeLists.txt  RedisClient.cpp  RedisClient.hpp
Utils/RestFrame/: CMakeLists.txt  CommonDefine.hpp  RestWrapper.cpp  RestWrapper.hpp
Utils/Thread/: AsyncTask.cpp  AsyncTask.hpp  CMakeLists.txt
Utils/TimeUtils/: CMakeLists.txt  TimeUtils.cpp  TimeUtils.hpp
cmake/: module.cmake
configs/: DrogonRestConfig.json  LoggerConfig.json  ModuleDefine.json  RestRoutes.json  caddyfile  dependencies.txt  dev.caddy  drogon_config_template.json  prod.caddy  redisConfig.json
documents/: scheduler.md
main/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/ModuleA/: CMakeLists.txt  moduleA.cpp  moduleA.hpp
modules/ModuleB/: CMakeLists.txt  moduleB.cpp  moduleB.hpp
modules/interface/: CMakeLists.txt
modules/interface/ChatCppRestServiceItf/: CMakeLists.txt  ChatCppRestServiceItf.cpp  ChatCppRestServiceItf.hpp
modules/interface/ModuleAItf/: CMakeLists.txt  ModuleAItf.cpp  ModuleAItf.hpp
modules/interface/ModuleBItf/: CMakeLists.txt  ModuleBItf.cpp  moduleBItf.hpp
modules/interface/Subscribe/: CMakeLists.txt  SubscribeCommon.hpp
modules/interface/UserManagerItf/: CMakeLists.txt  CommonDefine.hpp  UserMgrItf.cpp  UserMgrItf.hpp
modules/src/: CMakeLists.txt
modules/src/ChatCppRestService/: CMakeLists.txt  ChatCppRestService.cpp  ChatCppRestService.hpp  TokenFilter.hpp
modules/src/ModuleA/: CMakeLists.txt  moduleA.cpp  moduleA.hpp
modules/src/ModuleB/: CMakeLists.txt  moduleB.cpp  moduleB.hpp
modules/src/UserManager/: CMakeLists.txt  CommonDefine.hpp  RequestHandler.cpp  RequestHandler.hpp  UserMgr.cpp  UserMgr.hpp
scripts/Env/: .env
scripts/database/: chat.sql
scripts/dependencies/: dependencies.sh
scripts/ssl/: make_cert.sh
scripts/thirdpartyLib/: redis.sh
