cmake_minimum_required(VERSION 3.10)
project(CHAT)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/thirdPartyDepends;${CMAKE_PREFIX_PATH}")
set(CMAKE_INSTALL_RPATH "${CMAKE_SOURCE_DIR}/thirdPartyDepends/lib")
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(THIRD_PARTY_DIR "${CMAKE_SOURCE_DIR}/thirdPartyDepends")
set(MYSQL_INCLUDE_DIR "${THIRD_PARTY_DIR}/include/mysql")
set(MYSQL_LIBRARY "${THIRD_PARTY_DIR}/lib/libmysqlclient.so")
set(MYSQL_LIBRARIES "${THIRD_PARTY_DIR}/lib/libmysqlclient.so")
link_directories(${CMAKE_SOURCE_DIR}/thirdPartyDepends/lib)
include_directories(${CMAKE_SOURCE_DIR}/thirdPartyDepends/include)

add_subdirectory(main)
add_subdirectory(modules)
add_subdirectory(Utils)
